Fix Responsive Layout Bug
Added viewport meta. Took me WAY too long to figure out that was what
was needed.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -606,6 +606,7 @@ NAVIGATION STYLES
   border-radius: 100%;
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
+  line-height: 54px;
   background: #fff; }
   .mdl-layout__drawer-button i {
     color: #f07a33; }
@@ -618,19 +619,20 @@ NAVIGATION STYLES
 /*********************
 /PROJECTS STYLES
 *********************/
-.work .mdl-card__media {
-  background: #dccac0;
-  border: 4px solid #dccac0;
-  border-radius: 100px;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box; }
-  .work .mdl-card__media img.profile-image {
-    width: 100%;
-    height: auto;
+.work {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-align-content: space-between;
+  align-content: space-between; }
+  .work .mdl-card__media {
+    background: #dccac0;
+    border: 4px solid #dccac0;
     border-radius: 100px;
     -moz-border-radius: 100px;
     -webkit-border-radius: 100px;
@@ -638,60 +640,77 @@ NAVIGATION STYLES
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box; }
-
-.work .work--icon {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  background: #dccac0;
-  text-align: center;
-  border-radius: 100px;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px; }
-  .work .work--icon i {
-    color: #fff;
-    font-size: 60px;
-    /* Modifying typical MDL icon usage to accomodate classes */
-    /* Gets the icons for each class */ }
-    .work .work--icon i:before {
-      content: "help";
-      font-family: 'Material Icons';
-      font-weight: normal;
-      font-style: normal;
-      line-height: 1;
-      letter-spacing: normal;
-      text-transform: none;
-      display: inline-block;
-      white-space: nowrap;
-      word-wrap: normal;
-      direction: ltr;
-      -webkit-font-feature-settings: 'liga';
-      -webkit-font-smoothing: antialiased; }
-    .work .work--icon i.images:before {
-      content: "image"; }
-    .work .work--icon i.writing:before {
-      content: "keyboard"; }
-    .work .work--icon i.video:before {
-      content: "videocam"; }
-    .work .work--icon i.music:before {
-      content: "hearing"; }
-
-.work .mdl-card__title-text {
-  color: #72716d; }
-  .work .mdl-card__title-text em {
-    font-family: "Yrsa", Cambria, Times New Roman, Times, serif;
-    opacity: .7; }
-
-.work .mdl-card__supporting-text {
-  font-size: 16px;
-  line-height: 1.3;
-  color: #72716d; }
-
-.work .mdl-button {
-  background: #dccac0;
-  color: #fff; }
-  .work .mdl-button:hover {
-    background: #f07a33; }
+    .work .mdl-card__media img.profile-image {
+      width: 100%;
+      height: auto;
+      border-radius: 100px;
+      -moz-border-radius: 100px;
+      -webkit-border-radius: 100px;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      box-sizing: border-box; }
+  .work .work--icon {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background: #dccac0;
+    background-color: #dccac0;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#cfb7a9), to(#dccac0));
+    background-image: -webkit-linear-gradient(top, #cfb7a9, #dccac0);
+    background-image: -moz-linear-gradient(top, #cfb7a9, #dccac0);
+    background-image: -o-linear-gradient(top, #cfb7a9, #dccac0);
+    background-image: linear-gradient(to bottom, #cfb7a9, #dccac0);
+    text-align: center;
+    border-radius: 100px;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px; }
+    .work .work--icon i {
+      color: #fff;
+      font-size: 60px;
+      text-shadow: 0 1px 1px #caae9f;
+      /* Modifying typical MDL icon usage to accomodate classes */
+      /* Gets the icons for each class */ }
+      .work .work--icon i:before {
+        content: "help";
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        line-height: 1;
+        letter-spacing: normal;
+        text-transform: none;
+        display: inline-block;
+        white-space: nowrap;
+        word-wrap: normal;
+        direction: ltr;
+        -webkit-font-feature-settings: 'liga';
+        -webkit-font-smoothing: antialiased; }
+      .work .work--icon i.images:before {
+        content: "image"; }
+      .work .work--icon i.writing:before {
+        content: "keyboard"; }
+      .work .work--icon i.video:before {
+        content: "videocam"; }
+      .work .work--icon i.music:before {
+        content: "hearing"; }
+  .work .mdl-card__title-text {
+    color: #72716d; }
+    .work .mdl-card__title-text em {
+      font-family: "Yrsa", Cambria, Times New Roman, Times, serif;
+      opacity: .7; }
+  .work .mdl-card__supporting-text {
+    font-size: 16px;
+    line-height: 1.3;
+    color: #72716d; }
+  .work .mdl-card__actions {
+    background: #f7f3f1;
+    display: flex;
+    justify-content: space-between; }
+    .work .mdl-card__actions .mdl-button {
+      color: #72716d; }
+      .work .mdl-card__actions .mdl-button:hover {
+        background: #dccac0;
+        color: #fff; }
 
 /******************************************************************
 
